dsvw.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  namespace: default
spec:
  # quanti pod vogliamo?
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
    # necessario per il match con il service
      app: myNginx
  template:
    metadata:
      labels:
        app: myNginx
    spec:
    # a causa di problemi è stato scelto di utilizzare una configMap
      # - name: nginx-conf
      #   configMap:
      #     name: nginx-conf
      containers:
        - name: dsvw
          image: appsecco/dsvw
          ports:
            - containerPort: 8000
